2014-10-26  Roland Clobus <rclobus@rclobus.nl>
	* configure.ac: Work version is 15.4.

2014-10-26  Roland Clobus <rclobus@rclobus.nl>
	* Released 15.3.

2014-10-26  Roland Clobus <rclobus@rclobus.nl>
	* editor/gtk/editor.c: Fixed a read beyond the array size.
	* NEWS, client/ai/lobbybot.c: Prepare for the release of 15.2.

2014-10-24  Roland Clobus <rclobus@rclobus.nl>
	* docs/Relicense question about icons from the Gorilla theme.eml:
	Email about the relicensing of derived work from the Gorilla theme.
        With many thanks to Jakub Steiner for allowing his work to be
	relicensed.
	* client/gtk/data/style-ai.svg, server/gtk/pioneers-server.svg,
	editor/gtk/pioneers-editor.svg, client/gtk/data/pioneers.svg:
	Relicensed as CC-BY-SA 4.0

2014-07-07  Roland Clobus <rclobus@rclobus.nl>
	* configure.ac: Work version is 15.3.

2014-07-07  Roland Clobus <rclobus@rclobus.nl>
	* Released 15.2.

2014-07-07  Roland Clobus <rclobus@rclobus.nl>
	* NEWS, client/ai/lobbybot.c: Prepare for the release of 15.2.

2014-05-20  Roland Clobus <rclobus@rclobus.nl>
	* client/ai/ai.c: Added translator comment.
	* client/help/C/pioneers.xml, docs/pioneersai.6: Documented the new
	algorithm.
	* macros/gnome-autogen.sh: Synchronised from gnome-common 3.12.0-1.

2014-05-14  Roland Clobus <rclobus@rclobus.nl>
	* client/ai/ai.c, client/ai/ai.h, client/ai/genetic.c,
	client/ai/greedy.c: Moved the duplicated chat code to ai.c.

2014-05-11  Roland Clobus <rclobus@rclobus.nl>
	* configure.ac: Removed override for scrollkeeper. The successor,
	rarian, behaves correctly. 'automake -Wall' is now empty.
	* configure.ac: Documented all options in the configure script. With
	thanks to the Gentoo porter Julian Ospald <hasufell@gentoo.org> for
	pointing me to the suitable macros.

2014-04-20  Roland Clobus <rclobus@rclobus.nl>
	* MinGW/README.txt: Added instructions for GNU indent.

2014-04-19  Roland Clobus <rclobus@rclobus.nl>
	* client/gtk/chat.c, client/gtk/discard.c, client/gtk/frontend.h,