@@ -1,4 +1,8 @@
 2014-10-26  Roland Clobus <rclobus@rclobus.nl>
+	* editor/gtk/editor.c: Fix for Coverity CID 74390: Use the
+	right size for the ToolbarButtonData element.
+
+2014-10-26  Roland Clobus <rclobus@rclobus.nl>
 	* configure.ac: Work version is 15.4.
 
 2014-10-26  Roland Clobus <rclobus@rclobus.nl>
